Opened 11 years ago
Closed 11 years ago
#4977 closed defect (fixed)
h264 slice threads fuzz segfault
| Reported by: | Kieran Kunhya | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avcodec |
| Version: | unspecified | Keywords: | |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Attachments (1)
Change History (6)
comment:1 by , 11 years ago
comment:2 by , 11 years ago
Because I don't know how to get many thousands of lines into the clipboard from a remote SSH session.
comment:4 by , 11 years ago
My h264 tickets are partially automated. This one for example has 18k lines and using "pastebinit" this can go straight into a pastebin: http://paste.ubuntu.com/10739615/
If you know how to copy 18k lines from a terminal output into the clipboard over ssh please let me know.
I have at least 5 different crashes or asserts now with h264 sliced threads, but I will wait for this one to get fixed before submitting more
comment:5 by , 11 years ago
| Reproduced by developer: | set |
|---|---|
| Resolution: | → fixed |
| Status: | new → closed |
by , 11 years ago
| Attachment: | fuzz12.h264 added |
|---|
Note:
See TracTickets
for help on using tickets.



Why not paste the output into the bug report itself?